[package]
name = "superdev"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
base64 = "0.22.1"
serde = "1.0.219"
serde_json = "1.0.140"
solana-client = "1.18"
solana-program = "2.3.0"
solana-sdk = "1.18"
spl-token = "4.0.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
